revert: 需要变更的rpx单位变更为px

--- a/src/pages/user/components/Menu/Menu.scss
+++ b/src/pages/user/components/Menu/Menu.scss
@@ -5,7 +5,7 @@
 }
 .menu-item
 {
-    height: 120rpx;
+    height: 120px;
 }
 .hr
 {
@@ -25,6 +25,6 @@
 .menu-description
 {
     color: #13227A;
-    margin-top: 10rpx;
+    margin-top: 10px;
     font-size: 11pt;
 }
