--- a/src/pages/user/components/Menu/Menu.scss
+++ b/src/pages/user/components/Menu/Menu.scss
@@ -1,30 +1,21 @@
-.logo-menu
-{
-    height: 40px;
-    width: 40px;
+.menu-item {
+  height: 120px;
 }
-.menu-item
-{
-    height: 120px;
+.hr {
+  opacity: 0.1;
+  background-color: #979797;
 }
-.hr
-{
-    opacity: 0.1;
-    background-color: #979797;
-}
-.next
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18pt;
-    opacity: 0.2;
-    transform: scaleX(0.5);
+.next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18pt;
+  opacity: 0.2;
+  transform: scaleX(0.5);
 }
 
-.menu-description
-{
-    color: #13227A;
-    margin-top: 10px;
-    font-size: 11pt;
+.menu-description {
+  color: #13227a;
+  margin-top: 10px;
+  font-size: 11pt;
 }
