--- a/src/pages/home/components/MyCrops/index.scss
+++ b/src/pages/home/components/MyCrops/index.scss
@@ -6,3 +6,13 @@
     opacity: 0.16;
     margin-top: -5px;
 }
+
+.manage-button
+{
+    box-shadow: 0 0 25px -9px #44D7B6;
+}
+
+.plus-button
+{
+    box-shadow: 0 0 25px -9px #0091FF;
+}
