--- a/src/pages/home/components/PartHeader/index.scss
+++ b/src/pages/home/components/PartHeader/index.scss
@@ -1,7 +1,8 @@
 .grey-line
 {
-    width: 90%;
+    width: 95%;
     height: 2px;
+    background: #6D7278;
     opacity: 0.16;
     margin-top: -5px;
 }
